--- a/src/simplify_deployment/genomes/lag_25_best_genome.yaml
+++ b/src/simplify_deployment/genomes/lag_25_best_genome.yaml
@@ -1,292 +1,65 @@
 genome_minute_base:
--   lag: 499
-    variable: siCumulative
--   lag: 1400
-    variable: siCumulative
 -   lag: 25
-    variable: nrvCumulative
+    variable: siCumulative
 -   lag: 26
-    variable: nrvCumulative
+    variable: siCumulative
 -   lag: 27
-    variable: nrvCumulative
--   lag: 48
-    variable: nrvCumulative
--   lag: 992
-    variable: nrvCumulative
--   lag: 1492
-    variable: nrvCumulative
--   lag: 1531
-    variable: nrvCumulative
--   lag: 2800
-    variable: Alpha
+    variable: siCumulative
+-   lag: 28
+    variable: siCumulative
 genome_minute_filter:
 -   filter: band_pass
     filter_period_hours: 24.0
-    lag: 739
+    lag: 302
     variable: siCumulative
 -   filter: band_pass
     filter_period_hours: 24.0
-    lag: 1048
-    variable: siCumulative
--   filter: band_pass
-    filter_period_hours: 24.0
-    lag: 1920
-    variable: siCumulative
--   filter: band_pass
-    filter_period_hours: 24.0
-    lag: 2372
-    variable: siCumulative
--   filter: band_pass
-    filter_period_hours: 24.0
-    lag: 2662
-    variable: siCumulative
--   filter: band_pass
-    filter_period_hours: 12.0
-    lag: 183
-    variable: siCumulative
--   filter: band_pass
-    filter_period_hours: 12.0
-    lag: 461
-    variable: siCumulative
--   filter: band_pass
-    filter_period_hours: 12.0
-    lag: 2100
-    variable: siCumulative
--   filter: band_pass
-    filter_period_hours: 12.0
-    lag: 2708
-    variable: siCumulative
--   filter: band_pass
-    filter_period_hours: 1.0
-    lag: 2260
-    variable: siCumulative
--   filter: band_pass
-    filter_period_hours: 0.25
-    lag: 1276
-    variable: siCumulative
--   filter: band_pass
-    filter_period_hours: 0.25
-    lag: 2045
-    variable: siCumulative
--   filter: low_pass
-    filter_period_hours: 24.0
-    lag: 861
-    variable: siCumulative
--   filter: low_pass
-    filter_period_hours: 24.0
-    lag: 935
-    variable: siCumulative
--   filter: low_pass
-    filter_period_hours: 24.0
-    lag: 1678
-    variable: siCumulative
--   filter: low_pass
-    filter_period_hours: 12.0
-    lag: 87
-    variable: siCumulative
--   filter: low_pass
-    filter_period_hours: 12.0
-    lag: 688
-    variable: siCumulative
--   filter: low_pass
-    filter_period_hours: 12.0
-    lag: 2593
+    lag: 2007
     variable: siCumulative
 -   filter: low_pass
     filter_period_hours: 1.0
-    lag: 25
-    variable: siCumulative
--   filter: low_pass
-    filter_period_hours: 1.0
-    lag: 754
-    variable: siCumulative
--   filter: low_pass
-    filter_period_hours: 1.0
-    lag: 2360
+    lag: 1042
     variable: siCumulative
 -   filter: low_pass
     filter_period_hours: 0.25
-    lag: 26
-    variable: siCumulative
--   filter: low_pass
-    filter_period_hours: 0.25
-    lag: 246
-    variable: siCumulative
--   filter: low_pass
-    filter_period_hours: 0.25
-    lag: 553
-    variable: siCumulative
--   filter: low_pass
-    filter_period_hours: 0.25
-    lag: 2828
-    variable: siCumulative
--   filter: high_pass
-    filter_period_hours: 12.0
-    lag: 262
-    variable: siCumulative
--   filter: high_pass
-    filter_period_hours: 12.0
-    lag: 676
-    variable: siCumulative
--   filter: high_pass
-    filter_period_hours: 12.0
     lag: 1501
     variable: siCumulative
--   filter: high_pass
-    filter_period_hours: 12.0
-    lag: 2419
-    variable: siCumulative
--   filter: high_pass
-    filter_period_hours: 1.0
-    lag: 53
-    variable: siCumulative
--   filter: high_pass
-    filter_period_hours: 1.0
-    lag: 58
-    variable: siCumulative
--   filter: high_pass
-    filter_period_hours: 1.0
-    lag: 330
-    variable: siCumulative
--   filter: high_pass
-    filter_period_hours: 1.0
-    lag: 1295
-    variable: siCumulative
--   filter: high_pass
-    filter_period_hours: 1.0
-    lag: 2735
-    variable: siCumulative
--   filter: high_pass
-    filter_period_hours: 0.25
-    lag: 142
-    variable: siCumulative
--   filter: band_pass
-    filter_period_hours: 24.0
-    lag: 1695
-    variable: nrvCumulative
--   filter: band_pass
-    filter_period_hours: 24.0
-    lag: 1741
-    variable: nrvCumulative
--   filter: band_pass
-    filter_period_hours: 24.0
-    lag: 2513
-    variable: nrvCumulative
--   filter: band_pass
-    filter_period_hours: 12.0
-    lag: 383
-    variable: nrvCumulative
--   filter: band_pass
-    filter_period_hours: 12.0
-    lag: 2324
-    variable: nrvCumulative
--   filter: low_pass
-    filter_period_hours: 24.0
-    lag: 732
-    variable: nrvCumulative
--   filter: low_pass
-    filter_period_hours: 24.0
-    lag: 1874
-    variable: nrvCumulative
--   filter: low_pass
-    filter_period_hours: 24.0
-    lag: 2764
-    variable: nrvCumulative
--   filter: low_pass
-    filter_period_hours: 12.0
-    lag: 1526
-    variable: nrvCumulative
--   filter: low_pass
-    filter_period_hours: 1.0
-    lag: 61
-    variable: nrvCumulative
--   filter: low_pass
-    filter_period_hours: 1.0
-    lag: 1590
-    variable: nrvCumulative
--   filter: low_pass
-    filter_period_hours: 0.25
-    lag: 267
-    variable: nrvCumulative
--   filter: low_pass
-    filter_period_hours: 0.25
-    lag: 395
-    variable: nrvCumulative
--   filter: low_pass
-    filter_period_hours: 0.25
-    lag: 1924
-    variable: nrvCumulative
--   filter: high_pass
-    filter_period_hours: 24.0
-    lag: 61
-    variable: nrvCumulative
--   filter: high_pass
-    filter_period_hours: 24.0
-    lag: 1185
-    variable: nrvCumulative
--   filter: high_pass
-    filter_period_hours: 12.0
-    lag: 1905
-    variable: nrvCumulative
--   filter: high_pass
-    filter_period_hours: 12.0
-    lag: 2256
-    variable: nrvCumulative
--   filter: high_pass
-    filter_period_hours: 0.25
-    lag: 1603
-    variable: nrvCumulative
--   filter: high_pass
-    filter_period_hours: 0.25
-    lag: 2481
-    variable: nrvCumulative
--   filter: high_pass
-    filter_period_hours: 0.25
-    lag: 2535
-    variable: nrvCumulative
-genome_minute_transfo:
--   lag: 776
-    transformation: first_derivative
-    variable: siCumulative
--   lag: 1764
-    transformation: first_derivative
-    variable: siCumulative
--   lag: 659
-    transformation: second_derivative
-    variable: siCumulative
--   lag: 1986
-    transformation: second_derivative
-    variable: siCumulative
--   lag: 2354
-    transformation: cumsum_during_quarter
-    variable: siCumulative
--   lag: 2319
-    transformation: first_derivative
-    variable: nrvCumulative
--   lag: 195
-    transformation: second_derivative
-    variable: nrvCumulative
--   lag: 549
-    transformation: second_derivative
-    variable: nrvCumulative
--   lag: 763
-    transformation: second_derivative
-    variable: nrvCumulative
--   lag: 969
-    transformation: second_derivative
-    variable: nrvCumulative
--   lag: 1537
-    transformation: second_derivative
-    variable: nrvCumulative
--   lag: 2202
-    transformation: second_derivative
-    variable: nrvCumulative
--   lag: 2845
-    transformation: second_derivative
-    variable: nrvCumulative
--   lag: 104
-    transformation: cumsum_during_quarter
-    variable: nrvCumulative
--   lag: 681
-    transformation: cumsum_during_quarter
-    variable: nrvCumulative
+genome_quarter_base:
+-   lag: 40
+    variable: sI_MW
+-   lag: 70
+    variable: sI_MW
+-   lag: 85
+    variable: sI_MW
+-   lag: 25
+    variable: loaD_ID_MW
+-   lag: 40
+    variable: loaD_ID_MW
+-   lag: -20
+    variable: dsO_ID_MW
+-   lag: 10
+    variable: dsO_ID_MW
+-   lag: 25
+    variable: dsO_ID_MW
+-   lag: 40
+    variable: dsO_ID_MW
+-   lag: 70
+    variable: dsO_ID_MW
+-   lag: 175
+    variable: dsO_ID_MW
+-   lag: -20
+    variable: xB_ID_MW
+-   lag: -5
+    variable: xB_ID_MW
+-   lag: 10
+    variable: xB_ID_MW
+-   lag: 25
+    variable: xB_ID_MW
+-   lag: 40
+    variable: xB_ID_MW
+-   lag: 55
+    variable: xB_ID_MW
+-   lag: 70
+    variable: xB_ID_MW
+-   lag: 85
+    variable: xB_ID_MW
