--- a/src/simplify_deployment/genomes/lag_25_gen_2.yaml
+++ b/src/simplify_deployment/genomes/lag_25_gen_2.yaml
@@ -1,10 +1,9 @@
 genome_minute_base:
--   variable: nrvCumulative
+-   variable: siCumulative
     lag: 25
--   variable: nrvCumulative
+-   variable: siCumulative
     lag: 26
--   variable: nrvCumulative
+-   variable: siCumulative
     lag: 27
--   variable: nrvCumulative
+-   variable: siCumulative
     lag: 28
-
