--- a/src/simplify_deployment/genomes/lag_25_gen_1.yaml
+++ b/src/simplify_deployment/genomes/lag_25_gen_1.yaml
@@ -1,29 +1,58 @@
 genome_minute_base:
--   lag: 1802
-    variable: nrvCumulative
-genome_minute_filter:
--   filter: band_pass
-    filter_period_hours: 0.25
-    lag: 2875
-    variable: nrvCumulative
--   filter: low_pass
-    filter_period_hours: 1.0
-    lag: 500
-    variable: nrvCumulative
--   filter: low_pass
-    filter_period_hours: 1.0
-    lag: 924
-    variable: nrvCumulative
-genome_minute_transfo:
--   lag: 1556
-    transformation: cumsum_during_quarter
+-   lag: 25
     variable: siCumulative
--   lag: 806
-    transformation: first_derivative
-    variable: nrvCumulative
--   lag: 2645
-    transformation: first_derivative
-    variable: nrvCumulative
--   lag: 551
-    transformation: second_derivative
-    variable: nrvCumulative
+-   lag: 26
+    variable: siCumulative
+-   lag: 27
+    variable: siCumulative
+-   lag: 28
+    variable: siCumulative
+genome_quarter_base:
+-   lag: -20
+    variable: loaD_ID_MW
+-   lag: -5
+    variable: loaD_ID_MW
+-   lag: 10
+    variable: loaD_ID_MW
+-   lag: 25
+    variable: loaD_ID_MW
+-   lag: 40
+    variable: loaD_ID_MW
+-   lag: 55
+    variable: loaD_ID_MW
+-   lag: 70
+    variable: loaD_ID_MW
+-   lag: 85
+    variable: loaD_ID_MW
+-   lag: -20
+    variable: dsO_ID_MW
+-   lag: -5
+    variable: dsO_ID_MW
+-   lag: 10
+    variable: dsO_ID_MW
+-   lag: 25
+    variable: dsO_ID_MW
+-   lag: 40
+    variable: dsO_ID_MW
+-   lag: 55
+    variable: dsO_ID_MW
+-   lag: 70
+    variable: dsO_ID_MW
+-   lag: 85
+    variable: dsO_ID_MW
+-   lag: -20
+    variable: xB_ID_MW
+-   lag: -5
+    variable: xB_ID_MW
+-   lag: 10
+    variable: xB_ID_MW
+-   lag: 25
+    variable: xB_ID_MW
+-   lag: 40
+    variable: xB_ID_MW
+-   lag: 55
+    variable: xB_ID_MW
+-   lag: 70
+    variable: xB_ID_MW
+-   lag: 85
+    variable: xB_ID_MW
